--- a/.github/workflows/test_tutorials_v1.yml
+++ b/.github/workflows/test_tutorials_v1.yml
@@ -58,7 +58,7 @@ jobs:
           echo "Funding wallet: $WALLET_ADDRESS"
 
           # Set balance to 10,000 ETH (in wei: 10,000 * 10^18 = 0x9184e72a000000000000)
-          cast rpc anvil_setBalance $WALLET_ADDRESS 0x9184e72a000000000000 --rpc-url http://localhost:8546 || {
+          cast rpc anvil_setBalance $WALLET_ADDRESS 10000000000000000000 --rpc-url http://localhost:8546 || {
             echo "Error: Failed to set balance"
             exit 1
           }
