--- a/.github/workflows/test_tutorials_v1.yml
+++ b/.github/workflows/test_tutorials_v1.yml
@@ -51,18 +51,18 @@ jobs:
           until curl -s http://localhost:8546 >/dev/null; do sleep 1; done
           echo "Anvil is running"
 
-      - name: Fund Wallet with Unlimited ETH
+      - name: Fund Wallet with 10 ETH
         run: |
           # Derive the wallet address from the private key
           WALLET_ADDRESS=$(cast wallet address --private-key ${{ secrets.PRIVATE_KEY }})
           echo "Funding wallet: $WALLET_ADDRESS"
 
-          # Set balance to 10,000 ETH
+          # Set balance to 10 ETH
           cast rpc anvil_setBalance $WALLET_ADDRESS 10000000000000000000 --rpc-url http://localhost:8546 || {
             echo "Error: Failed to set balance"
             exit 1
           }
-          echo "Wallet funded with 10,000 ETH"
+          echo "Wallet funded with 10 ETH"
 
       - name: Verify Wallet Balance
         run: |
@@ -75,7 +75,7 @@ jobs:
           BALANCE_ETH=$(echo "scale=2; $BALANCE / 1000000000000000000" | bc)
           echo "Wallet balance: $BALANCE_ETH ETH"
           # Verify the balance is as expected
-          if [ "$BALANCE" -ge 1000000000000000000000 ]; then
+          if [ "$BALANCE" -ge 10000000000000000000 ]; then
             echo "Balance verification passed: Wallet has sufficient ETH"
           else
             echo "Balance verification failed: Wallet balance is less than expected"
