--- a/.github/workflows/test_tutorials_v1.yml
+++ b/.github/workflows/test_tutorials_v1.yml
@@ -74,8 +74,8 @@ jobs:
           # Convert to ETH for readability (using bc for calculation)
           BALANCE_ETH=$(echo "scale=2; $BALANCE / 1000000000000000000" | bc)
           echo "Wallet balance: $BALANCE_ETH ETH"
-          # Verify the balance is as expected
-          if [ "$BALANCE" -ge 10000000000000000000 ]; then
+          # Verify the balance is as expected using bc
+          if [ $(echo "$BALANCE >= 10000000000000000000" | bc) -eq 1 ]; then
             echo "Balance verification passed: Wallet has sufficient ETH"
           else
             echo "Balance verification failed: Wallet balance is less than expected"
