--- a/.github/workflows/test_tutorials_v1.yml
+++ b/.github/workflows/test_tutorials_v1.yml
@@ -22,6 +22,7 @@ jobs:
       PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
       ARBITRUM_RPC_URL: ${{ secrets.ARBITRUM_RPC_URL }}
       SERVER_URL: http://localhost:8546
+      PENDLE_API_URL: https://api-v2.pendle.finance
 
     steps:
       - name: Checkout repository
