--- a/.github/workflows/test_tutorials_v1.yml
+++ b/.github/workflows/test_tutorials_v1.yml
@@ -23,6 +23,7 @@ jobs:
       ARBITRUM_RPC_URL: ${{ secrets.ARBITRUM_RPC_URL }}
       SERVER_URL: http://localhost:8546
       PENDLE_API_URL: https://api-v2.pendle.finance
+      ENV: "production"
 
     steps:
       - name: Checkout repository
