--- a/.github/workflows/test_tutorials_v1.yml
+++ b/.github/workflows/test_tutorials_v1.yml
@@ -115,10 +115,11 @@ jobs:
           ETHEREUM_MAINNET_RPC_URL: http://localhost:8546
           ARBITRUM_MAINNET_RPC_URL: http://localhost:8546
           BASE_MAINNET_RPC_URL: http://localhost:8546
-        run: make install && make run
-            # Wait for API to be ready
-            until curl -s http://localhost:8000 >/dev/null; do sleep 1; done
-            echo "API is running"
+        run: |
+          make install && make run
+          # Wait for API to be ready
+          until curl -s http://localhost:8000 >/dev/null; do sleep 1; done
+          echo "API is running"
 
       - name: Wait
         run: sleep 5
