--- a/.github/workflows/test_tutorials_v1.yml
+++ b/.github/workflows/test_tutorials_v1.yml
@@ -48,19 +48,81 @@ jobs:
         with:
           cache: false
 
-      - name: Anvil Fork Base
+      # - name: Anvil Fork Base
+      #   run: |
+      #     anvil \
+      #     --block-time 0.05 \
+      #     --hardfork prague \
+      #     --host 0.0.0.0 \
+      #     --fork-url ${{ secrets.ETHEREUM_RPC_URL }} \
+      #     --port 8546 \
+      #     --chain-id 1 \
+      #     --no-rate-limit &
+      #     # Wait for Anvil to be ready
+      #     until curl -s http://localhost:8546 >/dev/null; do sleep 1; done
+      #     echo "Anvil is running"
+
+      # - name: Anvil Fork Base
+      #   run: |
+      #     anvil \
+      #     --block-time 0.05 \
+      #     --hardfork prague \
+      #     --host 0.0.0.0 \
+      #     --fork-url ${{ secrets.ARBITRUM_RPC_URL }} \
+      #     --port 8547 \
+      #     --chain-id 42161 \
+      #     --no-rate-limit &
+      #     # Wait for Anvil to be ready
+      #     until curl -s http://localhost:8547 >/dev/null; do sleep 1; done
+      #     echo "Anvil is running"
+
+      # - name: Anvil Fork Base
+      #   run: |
+      #     anvil \
+      #     --block-time 0.05 \
+      #     --hardfork prague \
+      #     --host 0.0.0.0 \
+      #     --fork-url ${{ secrets.BASE_RPC_URL }} \
+      #     --port 8548 \
+      #     --chain-id 8546 \
+      #     --no-rate-limit &
+      #     # Wait for Anvil to be ready
+      #     until curl -s http://localhost:8548 >/dev/null; do sleep 1; done
+      #     echo "Anvil is running"
+
+      - name: Anvil Fork Ethereum
+        run: |
+          anvil \
+          --block-time 0.05 \
+          --hardfork prague \
+          --host 0.0.0.0 \
+          --fork-url ${{ secrets.ETHEREUM_RPC_URL }} \
+          --port 8545 \
+          --chain-id 1 \
+          --no-rate-limit &
+
+      - name: Anvil Fork Arbitrum
         run: |
           anvil \
           --block-time 0.05 \
           --hardfork prague \
           --host 0.0.0.0 \
           --fork-url ${{ secrets.ARBITRUM_RPC_URL }} \
-          --port 8546 \
+          --port 8547 \
           --chain-id 42161 \
           --no-rate-limit &
-          # Wait for Anvil to be ready
-          until curl -s http://localhost:8546 >/dev/null; do sleep 1; done
-          echo "Anvil is running"
+
+      - name: Anvil Fork Base
+        run: |
+          anvil \
+          --block-time 0.05 \
+          --hardfork prague \
+          --host 0.0.0.0 \
+          --fork-url ${{ secrets.BASE_RPC_URL }} \
+          --port 8546 \
+          --chain-id 8453 \
+          --no-rate-limit &
+          sleep 5
 
       - name: Fund Wallet with 10 ETH
         run: |
@@ -118,8 +180,8 @@ jobs:
         working-directory: mono/api
         env:
           ETHEREUM_MAINNET_RPC_URL: http://localhost:8546
-          ARBITRUM_MAINNET_RPC_URL: http://localhost:8546
-          BASE_MAINNET_RPC_URL: http://localhost:8546
+          ARBITRUM_MAINNET_RPC_URL: http://localhost:8547
+          BASE_MAINNET_RPC_URL: http://localhost:8548
         run: |
           make install && make run
           # Wait for API to be ready
