--- a/.github/workflows/test_tutorials_v1.yml
+++ b/.github/workflows/test_tutorials_v1.yml
@@ -183,9 +183,9 @@ jobs:
           ARBITRUM_MAINNET_RPC_URL: http://localhost:8547
           BASE_MAINNET_RPC_URL: http://localhost:8546
         run: |
-          make install && make run
+          make install && make run &
           # Wait for API to be ready
-          until curl -s http://localhost:8000 >/dev/null; do sleep 1; done
+          until curl -s http://localhost:8000/health >/dev/null; do sleep 1; done
           echo "API is running"
 
       - name: Wait
