--- a/.github/workflows/test_usecases_v1.yml
+++ b/.github/workflows/test_usecases_v1.yml
@@ -4,11 +4,14 @@ on:
   schedule:
     # Runs at 00:00 UTC every day
     - cron: "0 0 * * *"
-  # Allow manual triggering
-  # push:
-  #   branches:
-  #     - main
+  pull_request:
+     branches:
+       - main
   workflow_dispatch:
+
+permissions:
+  id-token: write # This is required for requesting the JWT
+  contents: write # This is required for actions/checkout
 
 jobs:
   run-basic-examples:
@@ -50,6 +53,61 @@ jobs:
       - name: Run example
         working-directory: v1/basic_examples/deposit_on_aave/python_example
         run: ./.venv/bin/python main.py
+
+  run-pendle:
+    runs-on: ubuntu-latest
+    env:
+      COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
+      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      ARBITRUM_RPC_URL: ${{ secrets.ARBITRUM_RPC_URL }}
+      SERVER_URL: http://localhost:8000
+      PENDLE_API_URL: https://api-v2.pendle.finance
+      MORPHO_GRAPHQL_API_URL: https://blue-api.morpho.org/graphql
+      THE_GRAPH_URL_AAVE_ARBITRUM: https://gateway.thegraph.com/api/subgraphs/id/DLu
+      THE_GRAPH_URL_AAVE_ETHEREUM: https://gateway.thegraph.com/api/subgraphs/id/Cd2gED
+      THE_GRAPH_URL_AAVE_BASE: https://gateway.thegraph.com/api/subgraphs/id/GQFb
+      THE_GRAPH_API_KEY: 815da
+      ENV: "production"
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+
+      - name: PWD
+        working-directory: v1/pendle/typescript
+        run: pwd
+
+      - name: Start up full local API and anvil
+        uses: ./.github/actions/local_anvil_and_api
+        id: local_anvil_and_api
+        with:
+          ethereum_rpc_url: ${{ secrets.ETHEREUM_MAINNET_RPC_URL }}
+          arbitrum_rpc_url: ${{ secrets.ARBITRUM_MAINNET_RPC_URL }}
+          base_rpc_url: ${{ secrets.BASE_MAINNET_RPC_URL }}
+          private_key: ${{ secrets.PRIVATE_KEY }}
+          mono_app_id: ${{ secrets.MONOREPOAPP_ID }}
+          mono_app_private_key: ${{ secrets.MONOREPOAPP_PRIVATE_KEY }}
+          fund_amount_eth: "10"
+
+      - name: Install dependencies
+        working-directory: v1/pendle/typescript
+        run: npm install
+
+      - name: Build application
+        working-directory: v1/pendle/typescript
+        run: npm run build
+
+      - name: Run application
+        working-directory: v1/pendle/typescript
+        env:
+          RPC_URL: ${{ steps.local_anvil_and_api.outputs.arbitrum_local_url }}
+        run: npm run start
+
 
   failure-alert:
     if: failure() && github.event_name == 'schedule' # Runs only if a previous job failed & triggered by cron
