--- a/.github/workflows/test_usecases_v0.yml
+++ b/.github/workflows/test_usecases_v0.yml
@@ -3,134 +3,21 @@ name: test_usecases_v_zero
 on:
   schedule:
     # Runs at 00:00 UTC every day
-    - cron: '0 0 * * *'
-  # Allow manual triggering
+    - cron: "0 0 * * *"
+  pull_request:
+     branches:
+       - main
   workflow_dispatch:
 
-# jobs:
+permissions:
+  id-token: write
+  contents: write
 
-  # run-zero-dev:
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
-  #     PRIVATE_KEY:  ${{ secrets.PRIVATE_KEY }}
-  #     ZERODEV_RPC:  ${{ secrets.ZERODEV_RPC }}
-    
-  #   steps:
-  #   - name: Checkout repository
-  #     uses: actions/checkout@v3
-    
-  #   - name: Set up Node.js
-  #     uses: actions/setup-node@v3
-  #     with:
-  #       node-version: '20'
-    
-  #   - name: PWD
-  #     working-directory: v0/smart_accounts/zerodev
-  #     run: pwd
-    
-  #   - name: Install dependencies
-  #     working-directory: v0/smart_accounts/zerodev
-  #     run: npm install
-    
-  #   - name: Run application
-  #     working-directory: v0/smart_accounts/zerodev
-  #     run: npm run start
+jobs:
+  do-nothing:
+    runs-on: ubuntu-latest
 
-  # run-safe:
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
-  #     SIGNER_ADDRESS: "0xb8340945eBc917D2Aa0368a5e4E79C849c461511"
-  #     SIGNER_PRIVATE_KEY: ${{ secrets.SIGNER_PRIVATE_KEY }}
-  #     ARBITRUM_RPC_URL: ${{ secrets.ARBITRUM_RPC_URL }}
-  #     SAFE_ADDRESS: "0xd6C05083ebA87Cef07652f81b0c836c500c2db92"
-  #     SAFE_TX_SERVICE_URL: "https://safe-transaction-arbitrum.safe.global"
-
-  #   steps:
-  #   - name: Checkout repository
-  #     uses: actions/checkout@v3
-
-  #   - name: Set up Node.js
-  #     uses: actions/setup-node@v3
-  #     with:
-  #       node-version: '20'
-
-  #   - name: PWD
-  #     working-directory: v0/smart_accounts/safe
-  #     run: pwd
-
-  #   - name: Install dependencies
-  #     working-directory: v0/smart_accounts/safe
-  #     run: npm install
-
-  #   - name: Run application
-  #     working-directory: v0/smart_accounts/safe
-  #     run: npm run start
-
-
-  # run-wallet:
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
-  #     SIGNER_ADDRESS: "0xb8340945eBc917D2Aa0368a5e4E79C849c461511"
-  #     SIGNER_PRIVATE_KEY: ${{ secrets.SIGNER_PRIVATE_KEY }}
-  #     ARBITRUM_RPC_URL: ${{ secrets.ARBITRUM_RPC_URL }}
-  #     SAFE_ADDRESS: "0xd6C05083ebA87Cef07652f81b0c836c500c2db92"
-  #     SAFE_TX_SERVICE_URL: "https://safe-transaction-arbitrum.safe.global"
-
-  #   steps:
-  #   - name: Checkout repository
-  #     uses: actions/checkout@v3
-
-
-  #   - name: Set up Node.js
-  #     uses: actions/setup-node@v3
-  #     with:
-  #       node-version: '20'
-
-  #   - name: PWD
-  #     working-directory: v0/wallet
-  #     run: pwd
-
-  #   - name: Install dependencies
-  #     working-directory: v0/wallet
-  #     run: npm install
-
-  #   - name: Run application
-  #     working-directory: v0/wallet
-  #     run: npm run build
-
-  #   - name: Start web application
-  #     working-directory: v0/wallet
-  #     run: npm run start & # The '&' runs the command in the background
-  #     # Give the server some time to start up before running tests
-  #     # You might need to adjust this delay based on your application's startup time
-  #   - name: Wait for application to start
-  #     run: sleep 10 # Wait for 10 seconds. Adjust as needed.
-
-  #   - name: Run Tests
-  #     working-directory: v0/wallet
-  #     run: npx cypress run
-
-  #   - name: Upload Cypress Artifacts
-  #     if: always()  # <-- important: runs even if previous step failed
-  #     uses: actions/upload-artifact@v4
-  #     with:
-  #       name: cypress-artifacts
-  #       path: |
-  #         ./cypress/screenshots
-  #         ./cypress/videos
-  #       retention-days: 7
-
-
-  # failure_alert:
-  #   if: failure() && github.event_name == 'schedule' # Runs only if a previous job failed & triggered by cron
-  #   runs-on: ubuntu-latest
-  #   needs: [run-zero-dev, run-safe, run-wallet]
-  #   steps:
-  #     - name: Send failure notification
-  #       run: |
-  #         curl -X POST "https://allquiet.app/api/webhook/829f846c-4dfa-4a58-ab33-eafae34a57c9" \
-  #              -H "Content-Type: application/json" \
-  #              -d '{"status": "Open", "severity": "Critical", "message": "GitHub workflow failed", "run_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"}'
+    steps:
+      - name: Do nothing
+        run: |
+          echo "I am doing nothing"
