--- a/.github/workflows/test_usecases_v1.yml
+++ b/.github/workflows/test_usecases_v1.yml
@@ -5,8 +5,8 @@ on:
     # Runs at 00:00 UTC every day
     - cron: "0 0 * * *"
   pull_request:
-     branches:
-       - main
+    branches:
+      - main
   workflow_dispatch:
 
 permissions:
@@ -59,7 +59,7 @@ jobs:
     env:
       COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
       PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-      ARBITRUM_RPC_URL: ${{ secrets.ARBITRUM_RPC_URL }}
+      ARBITRUM_RPC_URL: http://localhost:8547
       SERVER_URL: http://localhost:8000
       PENDLE_API_URL: https://api-v2.pendle.finance
       MORPHO_GRAPHQL_API_URL: https://blue-api.morpho.org/graphql
@@ -107,7 +107,6 @@ jobs:
         env:
           RPC_URL: ${{ steps.local_anvil_and_api.outputs.arbitrum_local_url }}
         run: npm run start
-
 
   failure-alert:
     if: failure() && github.event_name == 'schedule' # Runs only if a previous job failed & triggered by cron
