--- a/.github/workflows/test_usecases_v1.yml
+++ b/.github/workflows/test_usecases_v1.yml
@@ -54,7 +54,7 @@ jobs:
         working-directory: v1/basic_examples/deposit_on_aave/python_example
         run: ./.venv/bin/python main.py
 
-  run-pendle:
+  run-pendle-typescript:
     runs-on: ubuntu-latest
     env:
       COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
@@ -71,6 +71,42 @@ jobs:
         with:
           node-version: "20"
 
+      - name: Start up full local API and anvil
+        uses: ./.github/actions/local_anvil_and_api
+        id: local_anvil_and_api
+        with:
+          ethereum_rpc_url: ${{ secrets.ETHEREUM_MAINNET_RPC_URL }}
+          arbitrum_rpc_url: ${{ secrets.ARBITRUM_MAINNET_RPC_URL }}
+          base_rpc_url: ${{ secrets.BASE_MAINNET_RPC_URL }}
+          private_key: ${{ secrets.PRIVATE_KEY }}
+          mono_app_id: ${{ secrets.MONOREPOAPP_ID }}
+          mono_app_private_key: ${{ secrets.MONOREPOAPP_PRIVATE_KEY }}
+          fund_amount_eth: "10"
+
+      - name: Install dependencies
+        working-directory: v1/pendle/typescript
+        run: npm install
+
+      - name: Build application
+        working-directory: v1/pendle/typescript
+        run: npm run build
+
+      - name: Run application
+        working-directory: v1/pendle/typescript
+        run: npm run start
+    
+    run-pendle-python:
+    runs-on: ubuntu-latest
+    env:
+      COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
+      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      ARBITRUM_RPC_URL: http://localhost:8547
+      SERVER_URL: http://localhost:8000
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Install uv
         run: curl -LsSf https://astral.sh/uv/install.sh | sh
 
@@ -85,28 +121,6 @@ jobs:
           mono_app_id: ${{ secrets.MONOREPOAPP_ID }}
           mono_app_private_key: ${{ secrets.MONOREPOAPP_PRIVATE_KEY }}
           fund_amount_eth: "10"
-
-      - name: PWD
-        working-directory: v1/pendle/typescript
-        run: pwd
-
-      - name: Install dependencies
-        working-directory: v1/pendle/typescript
-        run: npm install
-
-      - name: Build application
-        working-directory: v1/pendle/typescript
-        run: npm run build
-
-      - name: Run application
-        working-directory: v1/pendle/typescript
-        # env:
-        #   RPC_URL: ${{ steps.local_anvil_and_api.outputs.arbitrum_local_url }}
-        run: npm run start
-
-      - name: PWD
-        working-directory: v1/pendle/python
-        run: pwd
 
       - name: Install dependencies
         working-directory: v1/pendle/python
