--- a/.github/workflows/test_usecases_v1.yml
+++ b/.github/workflows/test_usecases_v1.yml
@@ -93,7 +93,7 @@ jobs:
   failure-alert:
     if: failure() && github.event_name == 'schedule' # Runs only if a previous job failed & triggered by cron
     runs-on: ubuntu-latest
-    needs: [run-basic-examples]
+    needs: [run-pendle-typescript, run-pendle-python]
     steps:
       - name: Send failure notification
         run: |
