--- a/.github/workflows/test_usecases_v1.yml
+++ b/.github/workflows/test_usecases_v1.yml
@@ -90,10 +90,56 @@ jobs:
         working-directory: v1/pendle/python
         run: ./.venv/bin/python src/main.py
 
+  run-transaction-bundler-typescript:
+    runs-on: ubuntu-latest
+    env:
+      COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
+      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      ETHEREUM_RPC_URL: http://localhost:8545
+      SERVER_URL: http://localhost:8000
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+
+      - name: Start up full local API and anvil
+        uses: ./.github/actions/local_anvil_and_api
+        id: local_anvil_and_api
+        with:
+          ethereum_rpc_url: ${{ secrets.ETHEREUM_MAINNET_RPC_URL }}
+          arbitrum_rpc_url: ${{ secrets.ARBITRUM_MAINNET_RPC_URL }}
+          base_rpc_url: ${{ secrets.BASE_MAINNET_RPC_URL }}
+          private_key: ${{ secrets.PRIVATE_KEY }}
+          mono_app_id: ${{ secrets.MONOREPOAPP_ID }}
+          mono_app_private_key: ${{ secrets.MONOREPOAPP_PRIVATE_KEY }}
+          fund_amount_eth: "10"
+
+      - name: Install dependencies
+        working-directory: v1/transaction_bundler/typescript
+        run: npm install
+
+      - name: Build application
+        working-directory: v1/transaction_bundler/typescript
+        run: npm run build
+
+      - name: Run application
+        working-directory: v1/transaction_bundler/typescript
+        run: npm run start
+
   failure-alert:
     if: failure() && github.event_name == 'schedule' # Runs only if a previous job failed & triggered by cron
     runs-on: ubuntu-latest
-    needs: [run-pendle-typescript, run-pendle-python]
+    needs:
+      [
+        run-pendle-typescript,
+        run-pendle-python,
+        run-transaction-bundler-typescript,
+      ]
     steps:
       - name: Send failure notification
         run: |
