--- a/v1/transaction_bundler/python/pyproject.toml
+++ b/v1/transaction_bundler/python/pyproject.toml
@@ -1,21 +1,12 @@
-[tool.poetry]
-name = "transaction-bundling-generic-example"
+[project]
+name = "python"
 version = "0.1.0"
-description = "Example of generic transaction bundling"
-authors = ["Compass Labs"]
+description = "Add your description here"
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.10"
-web3 = "^7.12.0"
-compass-api-sdk = "*"
-python-dotenv = "^1.1.0"
-
-[tool.poetry.group.dev.dependencies]
-black = "^25.1.0"
-mypy = "^1.16.0"
-pytest = "^8.4.0"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires-python = ">=3.12"
+dependencies = [
+    "compass-api-sdk>=1.0.0",
+    "dotenv>=0.9.9",
+    "eth-account>=0.13.7",
+    "web3>=7.12.0",
+]
