--- a/v1/aave_looping/python/pyproject.toml
+++ b/v1/aave_looping/python/pyproject.toml
@@ -1,18 +1,12 @@
 [project]
-name = "aave-looping-example" # This is your project's name, NOT an interpreter name
+name = "python"
 version = "0.1.0"
-description = "Example of Aave looping in Python"
+description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
-
+requires-python = ">=3.12"
 dependencies = [
-    "web3~=7.12.0",
-    "python-dotenv~=1.1.0",
-    "compass-api-sdk~=*",
-]
-
-[project.optional-dependencies]
-dev = [
-    "pytest",
-    "ruff",
+    "compass-api-sdk>=1.0.0",
+    "dotenv>=0.9.9",
+    "eth-account>=0.13.7",
+    "web3>=7.12.0",
 ]
