--- a/v1/provence_example/package.json
+++ b/v1/provence_example/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@compass-labs/sdk": "^1.0.178",
+    "@compass-labs/api-sdk": "^1.0.14",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
