--- a/v1/dynamic_example/package.json
+++ b/v1/dynamic_example/package.json
@@ -15,7 +15,8 @@
     "@dynamic-labs/sdk-react-core": "^4.26.0",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "viem": "^2.34.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
