--- a/v1/dynamic_example/.gitignore
+++ b/v1/dynamic_example/.gitignore
@@ -1,26 +1,14 @@
-**/.venv
-**/.idea
-**/.devcontainer
-**/node_modules
-**/*lock*
-**/.env
-**/package-lock.json
-
-.env`rm
-
-
-.vscode/
-
-.python-version
-
-
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
 /.pnp
-.pnp.js
-.yarn/install-state.gz
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
 # testing
 /coverage
@@ -40,9 +28,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# local env files
-.env*.local
+# env files (can opt-in for committing if needed)
+.env*
 
 # vercel
 .vercel
@@ -50,8 +39,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# vscode
-.vscode
-
-/.next
