--- a/v1/aave_looping_ui/env.example
+++ b/v1/aave_looping_ui/env.example
@@ -1,3 +1,5 @@
 # Dynamic SDK Configuration
 # Get your environment ID from https://app.dynamic.xyz/
 NEXT_PUBLIC_DYNAMIC_ENVIRONMENT_ID=your_environment_id_here 
+# Compass API Key can be obtained here: https://docs.compasslabs.ai/v1/documentation/overview
+NEXT_PUBLIC_COMPASS_API_KEY=your_compass_api_key
