--- a/v1/provence_example/package.json
+++ b/v1/provence_example/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@compass-labs/api-sdk": "^1.0.14",
+    "@dynamic-labs/ethereum": "^4.26.0",
+    "@dynamic-labs/ethereum-all": "^0.18.30",
+    "@dynamic-labs/sdk-react-core": "^4.26.0",
     "next": "14.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "viem": "^2.34.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
@@ -21,6 +25,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
+    "pino-pretty": "^13.1.1",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
