--- a/v1/aave_looping_ui/package.json
+++ b/v1/aave_looping_ui/package.json
@@ -13,7 +13,9 @@
     "@dynamic-labs/ethereum": "^4.26.0",
     "@dynamic-labs/ethereum-all": "^0.18.30",
     "@dynamic-labs/sdk-react-core": "^4.26.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "next": "15.4.6",
+    "pino-pretty": "^13.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "viem": "^2.34.0"
