--- a/v1/provence_example/package.json
+++ b/v1/provence_example/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "dynamic_example",
+  "name": "provence-example",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@compass-labs/api-sdk": "^1.0.20",
+    "@compass-labs/api-sdk": "^1.0.14",
     "@dynamic-labs/ethereum": "^4.26.0",
     "@dynamic-labs/ethereum-all": "^0.18.30",
     "@dynamic-labs/sdk-react-core": "^4.26.0",
-    "@react-native-async-storage/async-storage": "^1.24.0",
     "next": "15.4.6",
-    "pino-pretty": "^13.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "viem": "^2.34.0"
+    "viem": "^2.34.0",
+    "@react-native-async-storage/async-storage": "^1.24.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "pino-pretty": "^13.1.1",
+    "postcss": "^8.4.32",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
