--- a/wallet-earn/package.json
+++ b/wallet-earn/package.json
@@ -12,6 +12,7 @@
     "@compass-labs/api-sdk": "^1.0.23",
     "@geist-ui/core": "^2.3.8",
     "@radix-ui/react-slider": "^1.3.6",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.540.0",
     "motion": "^12.23.12",
