--- a/v1/basic_examples/deposit_on_morpho/python_example/pyproject.toml
+++ b/v1/basic_examples/deposit_on_morpho/python_example/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "compass-api-sdk>=1.1.0",
+    "devtools>=0.12.2",
     "dotenv>=0.9.9",
     "web3>=7.13.0",
-]
+    "ruff>=0.11.6",
+    ]
