--- a/.github/workflows/test_usecases_v1.yml
+++ b/.github/workflows/test_usecases_v1.yml
@@ -95,7 +95,7 @@ jobs:
     env:
       COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
       PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-      ARBITRUM_RPC_URL: http://localhost:8547
+      BASE_RPC_URL: http://localhost:8546
       SERVER_URL: http://localhost:8000
 
     steps:
@@ -130,7 +130,7 @@ jobs:
     env:
       COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
       PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-      ARBITRUM_RPC_URL: http://localhost:8547
+      BASE_RPC_URL: http://localhost:8546
       SERVER_URL: http://localhost:8000
 
     steps:
