--- a/.github/workflows/test_usecases_v1.yml
+++ b/.github/workflows/test_usecases_v1.yml
@@ -89,6 +89,76 @@ jobs:
       - name: Run example
         working-directory: v1/pendle/python
         run: ./.venv/bin/python src/main.py
+        
+  run-basic-examples-deposit-on-morpho-python: #
+    runs-on: ubuntu-latest
+    env:
+      COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
+      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      BASE_RPC_URL: http://localhost:8546
+      SERVER_URL: http://localhost:8000
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+
+      - name: Start up full local API and anvil
+        uses: ./.github/actions/local_anvil_and_api
+        id: local_anvil_and_api
+        with:
+          ethereum_rpc_url: ${{ secrets.ETHEREUM_MAINNET_RPC_URL }}
+          arbitrum_rpc_url: ${{ secrets.ARBITRUM_MAINNET_RPC_URL }}
+          base_rpc_url: ${{ secrets.BASE_MAINNET_RPC_URL }}
+          private_key: ${{ secrets.PRIVATE_KEY }}
+          mono_app_id: ${{ secrets.MONOREPOAPP_ID }}
+          mono_app_private_key: ${{ secrets.MONOREPOAPP_PRIVATE_KEY }}
+          fund_amount_eth: "10"
+
+      - name: Install dependencies
+        working-directory: v1/basic_examples/deposit_on_morpho/python_example
+        run: uv sync
+
+      - name: Run example
+        working-directory: v1/basic_examples/deposit_on_morpho/python_example
+        run: ./.venv/bin/python deposit_on_morpho.py #src/main.py
+        
+  run-basic-examples-deposit-on-aave-python:
+    runs-on: ubuntu-latest
+    env:
+      COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
+      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      BASE_RPC_URL: http://localhost:8546
+      SERVER_URL: http://localhost:8000
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+
+      - name: Start up full local API and anvil
+        uses: ./.github/actions/local_anvil_and_api
+        id: local_anvil_and_api
+        with:
+          ethereum_rpc_url: ${{ secrets.ETHEREUM_MAINNET_RPC_URL }}
+          arbitrum_rpc_url: ${{ secrets.ARBITRUM_MAINNET_RPC_URL }}
+          base_rpc_url: ${{ secrets.BASE_MAINNET_RPC_URL }}
+          private_key: ${{ secrets.PRIVATE_KEY }}
+          mono_app_id: ${{ secrets.MONOREPOAPP_ID }}
+          mono_app_private_key: ${{ secrets.MONOREPOAPP_PRIVATE_KEY }}
+          fund_amount_eth: "10"
+
+      - name: Install dependencies
+        working-directory: v1/basic_examples/deposit_on_aave/python_example
+        run: uv sync
+
+      - name: Run example
+        working-directory: v1/basic_examples/deposit_on_aave/python_example
+        run: ./.venv/bin/python main.py #src/main.py
 
   run-transaction-bundler-typescript:
     runs-on: ubuntu-latest
