using wallet connect

--- a/v1/aave_looping_ui/env.example
+++ b/v1/aave_looping_ui/env.example
@@ -1,5 +1,5 @@
-# Dynamic SDK Configuration
-# Get your environment ID from https://app.dynamic.xyz/
-NEXT_PUBLIC_DYNAMIC_ENVIRONMENT_ID=your_environment_id_here 
+# WalletConnect Configuration
+# Get your project ID from https://cloud.reown.com/
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=your_project_id_here
 # Compass API Key can be obtained here: https://docs.compasslabs.ai/v1/documentation/overview
 NEXT_PUBLIC_COMPASS_API_KEY=your_compass_api_key
