--- a/v1/aave_looping_ui/package.json
+++ b/v1/aave_looping_ui/package.json
@@ -14,11 +14,15 @@
     "@dynamic-labs/ethereum-all": "^0.18.30",
     "@dynamic-labs/sdk-react-core": "^4.26.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@reown/appkit": "^1.8.2",
+    "@reown/appkit-adapter-wagmi": "^1.8.2",
+    "@tanstack/react-query": "^5.86.0",
     "next": "15.4.6",
     "pino-pretty": "^13.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "viem": "^2.34.0"
+    "viem": "^2.37.3",
+    "wagmi": "^2.16.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
