--- a/v1/swaps_xyz/pyproject.toml
+++ b/v1/swaps_xyz/pyproject.toml
@@ -6,5 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "compass-api-sdk>=1.1.0",
+    "pyright>=1.1.405",
     "requests>=2.32.5",
+    "ruff>=0.12.12",
 ]
